Finished POMDP section

--- a/S2bibliography.bib
+++ b/S2bibliography.bib
@@ -128,4 +128,29 @@
 }
 
 
+@inproceedings{hansen1998solving,
+  title={Solving POMDPs by searching in policy space},
+  author={Hansen, Eric A},
+  booktitle={Proceedings of the Fourteenth conference on Uncertainty in artificial intelligence},
+  pages={211--219},
+  year={1998},
+  organization={Morgan Kaufmann Publishers Inc.}
+}
 
+@inproceedings{pineau2003point,
+  title={Point-based value iteration: An anytime algorithm for POMDPs},
+  author={Pineau, Joelle and Gordon, Geoff and Thrun, Sebastian and others},
+  booktitle={IJCAI},
+  volume={3},
+  pages={1025--1032},
+  year={2003}
+}
+
+@inproceedings{smith2004heuristic,
+  title={Heuristic search value iteration for POMDPs},
+  author={Smith, Trey and Simmons, Reid},
+  booktitle={Proceedings of the 20th conference on Uncertainty in artificial intelligence},
+  pages={520--527},
+  year={2004},
+  organization={AUAI Press}
+}
