--- a/S2template.tex
+++ b/S2template.tex
@@ -455,8 +455,12 @@ collapses back into regular LRTA*. This min-of-maxes is used again
 when setting \(f(s)\), again only when it's value \(+1\) exceeds the
 current \(f(s)\).
 
-\section{Modeling a Planning Problem}
-%TODO(jake): add citations
+\section[Modeling a Planning Problem] {Modeling a Planning Problem \footnotemark}
+\footnotetext{Throughout this section, the book \textit{Introduction to Stochastic Processes} 
+by Erhan \c{C}inlar was referenced  extensively, as were the lectures on artificial intelligence 
+from Geoffrey J. Gordon of CMU and Sarah Finney of Harvard.}
+
+%NOTE(jake): the command \c{C} gives you the character Ç
 
 Many planning and reinforcement learning problems occur in partially 
 observable stochastic environments. Given a complete model of the 
@@ -490,13 +494,18 @@ to satisfy the Markov property, or that it simply is Markovian.
   \label{fig:markovChain}
 \end{figure}
 
-This definition can be extended to the continuous time case to form 
+It is helpful to imagine a Markov chain as a weighted, directed graph $G = (V, E)$, 
+in which each vertex $v \in V$ corresponds to a state $s \in S$, and the weight of 
+each edge $\left(v, u \right) \in E$ corresponds to the probability of transitioning 
+from state $v$ into state $u$, $P \left( X_{n+1} = u \given X_n = v \right)$.
+
+The definition of a Markov chain can be extended to the continuous time case to form 
 what is called a Markov process. Given a state space $S$, a time 
 $t \in \mathbb{R}^+ = \left[ 0, \infty \right)$, and a stochastic process 
 $X = \left\{ X_t \given t \in \mathbb{R}^+ \right\}$, we say that $X$ is a 
-Markov process if for any $s \in S$ $\epsilon \geq 0$ and $\tau < t$,
+Markov process if for any $s \in S$, $\epsilon \geq 0$, and all times $\tau \leq t$
 \begin{equation*}
-  P \left( X_{t+\epsilon} = s \given X_\tau \right) = P \left( X_{t+\epsilon} = s \given X_t \right)
+  P \left( X_{t+\epsilon} = s \given X_{\tau \leq t} \right) = P \left( X_{t+\epsilon} = s \given X_t \right)
 \end{equation*}
 The interpretation of this definition is the same as the case of the discrete time Markov chain.
 
@@ -533,89 +542,105 @@ total reward including the discount factor will be
 Since $\gamma \in \left[0, 1 \right]$, this series will always converge given 
 finite valued rewards.
 
-If $A$ and $S$ are finite rather than countable, then an MDP can be solved with 
-linear programming or a variety of dynamic programming algorithms.
+If $A$ and $S$ are finite rather than countably infinite, then an MDP can be solved with 
+linear programming or a variety of dynamic programming algorithms. If they are countably 
+infinite, then in some cases it is still possible to get an approximate answer by only 
+considering a finite subset of the state and action spaces.
 
 \begin{figure}[h]
   \centering
   \def\svgwidth{\columnwidth}
   \includegraphics[width=\columnwidth]{MDP.png}
-  \caption{A three state MDP with $\left| A \right| =2$. (Source: Wikipedia)}
+  \caption{A three state MDP with two actions. (Source: Wikipedia)}
   \label{fig:markovDecisionProcess}
 \end{figure}
+
+Like Markov chains, it is helpful to imagine MDPs as graphs. However, in this case the vertices 
+are not just the states but also actions. The edges of the graph connect states to actions 
+and actions to states. There is never an edge which connects an action to another action nor 
+a state to another state.
 
 \subsubsection{Policies}
 \label{sec:policies}
 
 We have not yet specified how an agent decides which action to take. A policy 
 $\pi : S \mapsto A$ is a function which determines what action an agent will take 
-at each state. We say than a policy is an optimal policy if it leads to the highest expected reward.
+at each state. We say than a policy is an optimal policy if it leads to the highest expected utility.
 
-Let $J \left( s_i, a \right) : S \times A \mapsto \mathbb{R}$ denote the \textit{expected} 
-discounted value of taking action $a$ in state $s_i$ when there are $k$ steps 
-left in the process. A useful but unenlightening way to define an optimal policy is
+Let $U \left( s_i, a \right) : S \times A \mapsto \mathbb{R}$ denote the \textit{expected} 
+discounted utility of taking action $a$ in state $s_i$. A useful but unenlightening 
+way to define an optimal policy is
 \begin{equation*}
-  \pi \left(s_i \right) = \argmax_a J \left( s_i, a \right)
+  \pi \left(s_i \right) = \argmax_{a \in A} U \left( s_i, a \right)
 \end{equation*}
 This reads almost literally as ``given state $s_i$, choose the action which maximizes 
-the expected reward.'' We define $J \left( s_i, a \right)$ as the reward $R_{ia}$ for 
-taking action $a$ in state $s_i$ plus the expected discounted reward for taking that 
+the expected utility.'' We define $J \left( s_i, a \right)$ as the utility $R_{ia}$ for 
+taking action $a$ in state $s_i$ plus the expected discounted utility for taking that 
 action. Let $P_{ija}$ denote the probability of transitioning from state $s_i$ into $s_j$ 
 after taking action $a$, then
-\begin{equation} \label{eqn:J}
-  J \left( s_i, a \right) = R_{ia} + \gamma \sum_j P_{ija} J \left( s_j, \pi \left( s_j \right) \right)
+\begin{equation} \label{eqn:U}
+  U \left( s_i, a \right) = R_{ia} + \gamma \sum_{j=1}^{\left| S \right|} P_{ija} U \left( s_j, \pi \left( s_j \right) \right)
 \end{equation}
+Equation~\ref{eqn:U} has the form of a \textit{Bellman Equation}, a famous class of equations in dynamic programming.
+We say that $U \left( s_i, a \right)$ satisfies the Bellman equation if
+\begin{equation*}
+  U \left( s_i, a \right) = \max_{a \in A} R_{ia} + \gamma \sum_{j=1}^{\left| S \right|} P_{ija} U \left( s_j, \pi \left( s_j \right) \right)
+\end{equation*}
 
 \subsection{Solving an MDP}
-It is much easier to explain how to solve a POMDP if we first know to solve an MDP. 
+It is much easier to explain how to solve a POMDP if we first know how to solve an MDP.\@
 The solution of an MDP returns an optimal policy, the exact sequence of actions to take 
-at each point in time to maximize the agent's reward. For any given MDP, there exists a 
+at each point in time to maximize the agent's utility. For any given MDP, there exists a 
 unique optimal policy.
 
 \subsubsection{Value Iteration}
 
-To solve Equation~\ref{eqn:J}, it is convenient to break up the problem by the number 
+To solve Equation~\ref{eqn:U}, it is convenient to break up the problem by the number 
 of steps left and then apply a dynamic programming algorithm known as value iteration. 
-Let $J_k \left( s_i, a \right)$ denote the \textit{expected} value of taking action $a$ 
+Let $U_k \left( s_i, a \right)$ denote the expected utility of taking action $a$ 
 in state $s_i$ when there are $k$ steps left in the process, and similarly let 
 $\pi_k \left(s_i \right)$ denote the optimal policy for state $s_i$ when there are $k$ steps 
 left in the process. Then our definitions from Section~\ref{sec:policies} become
 \begin{equation*}
   \begin{split}
-    \pi_k \left(s_i \right) &= \argmax_a J_k \left( s_i, a \right) \\
-    J_k \left( s_i, a \right) &= R_{ia} + \gamma \sum_j P_{ija} J_{k-1} \left( s_j, \pi \left( s_j \right) \right)
+    \pi_k \left(s_i \right) &= \argmax_{a \in A} U_k \left( s_i, a \right) \\
+    U_k \left( s_i, a \right) &= R_{ia} + \gamma \sum_{j=1}^{\left| S \right|} P_{ija} U_{k-1} \left( s_j, \pi \left( s_j \right) \right)
   \end{split}
 \end{equation*}
 We also define a base case for when $k=0$,
 \begin{equation*}
-  J_0 \left( s, a \right) = 0 \quad \forall \left( s, a \right) \in S \times A
+  U_0 \left( s, a \right) = 0 \quad \forall \left( s, a \right) \in S \times A
 \end{equation*}
 
 If there were only a finite amount of steps $K$, then we could iterate over $k = 0, 1, \ldots, K$ 
-(as well as $i = 0, 1, \ldots |S|$ and all $a \in A$) and compute each $\pi_k$ and $J_k$. 
+(as well as $i = 0, 1, \ldots |S|$ and all $a \in A$) and compute each $\pi_k$ and $U_k$. 
 However, there is nothing preventing the number of steps from becoming infinite. 
 In this case, we choose some $\epsilon > 0$ and stop iterating over $k$ when
 \begin{equation*}
-  \left| J_k\left( s_i, a \right) - J_{k-1}\left( s_i, a \right) \right| < \epsilon
+  \left| U_k\left( s_i, a \right) - U_{k-1}\left( s_i, a \right) \right| < \epsilon
 \end{equation*}
-Since $J_k$ is convergent, this condition is guaranteed to occur eventually.
+Since $U_k$ is convergent, this condition is guaranteed to occur eventually.
 
 \subsubsection{Policy Iteration}
+\label{sec:policyIteration}
 
 Value iteration works by improving our planning policy despite having inaccurate 
-estimates of $J_k$. Policy iteration takes the opposite approach and begins with 
+estimates of $U_k$. Policy iteration takes the opposite approach and begins with 
 any arbitrary policy (or even a completely random one) and obtains accurate estimates 
-of $J_k$ before improving the policy. Policy iteration involves two steps: computing 
-the rewards $J_k \left(s_i, \pi_k \left(s_i \right) \right)$ for a fixed arbitrary policy, and then 
-using these rewards to compute a better policy.
+of $U_k$ before improving the policy. Policy iteration involves two steps: computing 
+the utilities $U_k \left(s_i, \pi_k \left(s_i \right) \right)$ for a fixed arbitrary policy, and then 
+using the knowledge of these utilities to compute a better policy.
 
-Given some fixed policy $\pi_k$, we compute the rewards much in the same way as before:
+Given some fixed policy $\pi_k$, we compute the utilities much in the same way as before:
 \begin{equation*}
-    J_k \left( s_i, \pi_k \left( s_j \right) \right) = R_{ia} + \gamma \sum_j P_{ija} J_{k-1} \left( s_j, \pi_k \left( s_j \right) \right)
+    U_k \left( s_i, \pi_k \left( s_j \right) \right) = R_{ia} + \gamma \sum_{j=1}^{\left| S \right|} P_{ija} U_{k-1} \left( s_j, \pi_k \left( s_j \right) \right)
 \end{equation*}
 and \textit{then} a better policy is calculated,
 \begin{equation*}
-  \pi_k \left(s_i \right) = \argmax_a J_k \left( s_i, a \right)
+  \begin{split}
+    \pi_k \left(s_i \right) &= \argmax_{a \in A} U_k \left( s_i, a \right) \\
+    &= \argmax_{a \in A}  R_{ia} + \gamma \sum_{j=1}^{\left| S \right|} P_{ija} U_{k-1} \left( s_j, a \right)
+  \end{split}
 \end{equation*}
 
 This method is not guaranteed to return the optimal policy. A different method exists 
@@ -646,7 +671,7 @@ by the 7-tuple
 A ``belief set'' $B$ is typically also part of a POMDP problem. The beliefs $b \left( s \right) \in B$ 
 represent a probability distribution over the states $s \in S$. At each time step, 
 the agent takes an action $a \in A$ which causes three things happen: the agent transitions 
-into a new state $s^\prime \in S$ (like in a Markov chain), the agent receives a reward equal to 
+into a new state $s^\prime \in S$ (like in a Markov chain), the agent receives a utility equal to 
 $R \left( s^\prime, a \right)$ (like in an MDP), %TODO(jake): should it be R(s,a)?
 and the agent receives an observation $\omega \in \Omega$ about the environment with probability 
 $O \left( \omega \given s^\prime, a \right)$ which it then uses to update its beliefs.
@@ -663,20 +688,67 @@ of beliefs $B^\prime$ by
   B^\prime = \tau \left( B, a, \omega \right)
 \end{equation*}
 
-\subsection{Solving a POMDP:\@ Modified Policy Iteration}
-%TODO(jake): explain the many ways to solve a POMDP and some current research.
+\begin{figure}[h]
+  \centering
+  \includegraphics[scale=0.4]{POMDPtree.png}
+  \caption{A POMDP represented as a tree.~\protect\cite{smith2004heuristic}}
+  \label{fig:POMDPtree}
+\end{figure}
+
+\subsection{Solving a POMDP}
 
 The exact solution to a POMDP yields the exact sequence of actions that an agent should take 
-to maximize the sum of its rewards. The definition of a POMDP allows for countably infinite 
+to maximize the sum of its utilities. The definition of a POMDP allows for countably infinite 
 state and action spaces. However, most algorithms for solving POMDPs must assume that the 
-state and action spaces are finite.
+state and action spaces are finite. POMDPs can be solved using almost the same methods as MDPs.
 
-POMDPs can be solved using almost the same methods as MDPs. 
-The methods should be modified to return a belief state vector.
+\subsubsection{Value Iteration}
+While value iteration worked quite well for MDPs, it is much less useful for POMDPs. The use of 
+observation probabilities gives POMDPs great modeling power, however it also adds significant 
+computational complexity. Performing value iteration on a POMDP is equivalent to performing value 
+iteration on a very large number of MDPs, since every belief state represents an MDP on its own. 
+Value iteration on POMDPs has a time complexity which is exponential in \textit{both} the number 
+of states $|S|$ and the number of actions $|A|$.
 
-\subsection{Applications of POMDPs}
-%TODO(jake) give a few applications of POMDPs
+\subsubsection{Policy Iteration}
+Although most of what was covered in previous sections was ``textbook'' material, POMDPs remain 
+an active area of research to this day. The size of a real-world POMDP problem is large enough 
+that it is impossible to solve in a reasonable amount of time. Applying the algorithm described 
+in Section~\ref{sec:policyIteration} is highly inefficient. Fortunately, there have been many 
+great strides towards improving policy iteration in recent years.
 
+\subsection{Current research in solving POMDPs}
+
+\begin{figure}[h]
+  \centering
+  \def\svgwidth{\columnwidth}
+  \includegraphics[scale=0.5]{state_controller.png}
+  \caption{A simple policy graph. (Source: Geoffrey J. Gordon)}
+  \label{fig:state_controller}
+\end{figure}
+\subsubsection{Policies as Finite-State Controllers}
+The inefficiency of policy iteration on POMDPs comes mainly from evaluating the utility 
+function for each policy. Efficiency can be greatly improved if the policy is represented 
+as a finite-state controller, which we call a \textit{policy graph}.~\cite{hansen1998solving} 
+Each vertex represents a vector in the utility function, and each edge represents a state 
+transition based on observations.
+
+This gives rise to a new algorithm. As before, given whatever the current policy is, the 
+utility function should be calculated. The system of linear equations that the utility function 
+represents should be solved, and then the utility function should be updated using the Bellman 
+equation. The policy is then updated, and new controllers added if necessary.
+
+\subsubsection{Point-Based Value Iteration}
+The main idea behind the Point-Based Value Iteration algorithm is to solve the POMDP for a finite 
+set of belief points.~\cite{pineau2003point} New belief points are added to the set when improvements 
+after each iterative step are not great enough. The POMDP is solved considering only this finite 
+set. A point-based value update takes only polynomial time.
+
+\subsubsection{Heuristic Search Value Iteration}
+Heuristic Search Value Iteration (HSVI) is an algorithm which obtains approximate solutions to POMDPs, 
+but runs quite fast and scales well to large problems. The main idea behind HSVI is to combine search 
+heuristics with a piecewise linear convex representation of the utility function.~\cite{smith2004heuristic} 
+The search heuristics greatly reduce the search space by only focusing on the ``most important'' beliefs.
 
 \bibliographystyle{acmsiggraph}
 \nocite{*}
