--- a/S2template.tex
+++ b/S2template.tex
@@ -1,5 +1,7 @@
 \documentclass[tog]{acmsiggraph}
 
+\renewcommand{\baselinestretch}{1.2} 
+
 % haha wow, we have so many \thanks{}es that we ran out of symbols to
 % use. this is set by the documentclass, so this is sorta breaking the
 % rules, but hey, the alternative is to break compilation.
