Extended POMDP further

--- a/S2bibliography.bib
+++ b/S2bibliography.bib
@@ -154,3 +154,21 @@
   year={2004},
   organization={AUAI Press}
 }
+
+@inproceedings{hansen2004dynamic,
+  title={Dynamic programming for partially observable stochastic games},
+  author={Hansen, Eric A and Bernstein, Daniel S and Zilberstein, Shlomo},
+  booktitle={AAAI},
+  volume={4},
+  pages={709--715},
+  year={2004}
+}
+
+@inproceedings{thrun1999monte,
+  title={Monte Carlo POMDPs.},
+  author={Thrun, Sebastian},
+  booktitle={NIPS},
+  volume={12},
+  pages={1064--1070},
+  year={1999}
+}
